# Smalldungeons

./: .gitignore  .gitmodules  Cargo.toml  NAMETAG_SYSTEM.md  README.md  doorthing.py
.github/workflows/: build.yml  release.yml  rust.yml
RoomsWorldHelper/: index.js  metadata.json  notes.txt  room_migrator.py
RoomsWorldHelper/data/: new_rooms.json
RoomsWorldHelper/mechanics/: crushers.js  crypts.js
RoomsWorldHelper/utils/: render.js  utils.js
converter/: dungeon_converter.py  dungeons.txt
crates/blocks/: Cargo.toml
crates/blocks/src/: lib.rs
crates/macros/src/: lib.rs  packet_deserializable.rs  packet_serializable.rs
src/: main.rs
src/door_data/: doors.txt
src/dungeon/: crushers.rs  door.rs  dungeon.rs  dungeon_state.rs  map.rs  mod.rs  room.rs  room_data.rs
src/dungeon/p3/: mod.rs  p3_manager.rs  simon_says.rs  terminal.rs
src/dungeon/room/: crypts.rs  fallingblocks.rs  levers.rs  locked_chests.rs  mod.rs  mushroom.rs  room.rs  room_data.rs  secrets.rs  secrets_loader.rs  superboomwalls.rs
src/dungeon_storage/: dungeons.txt
src/net/: client.rs  client_event.rs  connection_state.rs  internal_packets.rs  mod.rs  network_message.rs  run_network.rs  var_int.rs  varint.rs
src/net/packets/: mod.rs  old_packet.rs  old_packet_registry.rs  packet.rs  packet_buffer.rs  packet_context.rs  packet_deserialize.rs  packet_registry.rs  packet_serialize.rs  packet_write.rs
src/net/protocol/: mod.rs
src/room_data/: 12,entrance.json  13,new_trap.json  15,blood.json  35,dragon.json  5,fairy.json  Fairy_462_-312_1x1  Water_498_-204_1x1
src/server/: chunk.rs  lava_boost.rs  mod.rs  old_server.rs  old_world.rs  redstone.rs  server.rs  world.rs
src/server/block/: block_aabb.rs  block_collision.rs  block_interact_action.rs  block_parameter.rs  block_pos.rs  (+5 more)
src/utils/: bitset.rs  deterministic_hasher.rs  mod.rs  seeded_rng.rs
(+251 files in other folders)
