[package]
name = "RustClear"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
enum_dispatch = "0.3.13"
flate2 = "1.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
indexmap = "2.9.0"
include_dir = "0.7.4"
